--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,6 +10,9 @@ jobs:
         uses: actions/hello-world-docker-action@v1
         with:
           who-to-greet: 'Mona the Octocat'
-      # Use the output from the `hello` step
+      # Use the output from the `hello` step time
       - name: Get the output time
         run: echo "The time was ${{ steps.hello.outputs.time }}"
+      # Use the output from the `hello` step uname
+      - name: Get the output uname -r
+        run: echo "The time was ${{ steps.hello.outputs.uname }}"
